--- a/src/app/content/contact/contact.component.html
+++ b/src/app/content/contact/contact.component.html
@@ -19,8 +19,8 @@
                 <p>10:00 - 20:00</p></div>
             <div class="contact-info_box"><p>Адрес:</p>
                 <p>Сумская 77/79</p></div>
-            <div class="contact-info_box"><p>Сайт:</p>
-                <p>cvetochniy.com</p></div>
+            <div class="contact-info_box" ><p>Инстаграм:</p>
+                <a class="contact-info_box_instagram" href="https://www.instagram.com/_cvetochniy/" target="_blank">_cvetochniy</a></div>
         </div>
         <div class="google-maps_wrapper">
             <agm-map  [styles]="styles" [latitude]="lat" [zoom]="zoom" [longitude]="lng">
