--- a/src/app/content/cooperation/cooperation.component.html
+++ b/src/app/content/cooperation/cooperation.component.html
@@ -4,7 +4,7 @@
     <a href="tel:+380966091255">&nbsp;096&#8209;609&#8209;12&#8209;55</a>
     <a href="mailto:lazutikovnikita@gmail.com">lazutikovnikita@gmail.com</a>
     <h3>Корпоративные и оптовые заказы </h3>
-    <a href="tel:+380966091255">&nbsp;096&#8209;609&#8209;12&#8209;55</a>
-    <a href="mailto:corporative@gmail.com">corporative@gmail.com</a>
+    <a href="tel:+380956979520">&nbsp;095&#8209;697&#8209;95&#8209;20</a>
+    <a href="mailto:cvetochniykharkiv@gmail.com">cvetochniykharkiv@gmail.com</a>
   </div>
 </section>
