--- a/src/app/content/shop/cart/cart.component.html
+++ b/src/app/content/shop/cart/cart.component.html
@@ -29,7 +29,7 @@
                             ></div>
                         <div class="cart-elem cart-product-title cart-title-title">
                             <span class="product-desc-mobile"></span>
-                            <span>{{line.product.name}}</span>
+                            <span class="cart_product_name">{{line.product.name}}</span>
                         </div>
                         <div class="cart-elem cart-price cart-price-title">
                             <span class="product-desc-mobile">Цена:</span>
