--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,9 @@
                 <a id="logo" [routerLink]="['']">цветочный.</a>
             </div>
             <div class="navbar_elem navbar_menu" [class.link_disable]="menuStatus">
-                <a class="navLink" [routerLink]="['category', 'shop']" routerLinkActive="active-link">Магазин</a>
-                <a class="navLink" [routerLink]="['category', 'wedding']"  routerLinkActive="active-link">Свадебное
-                    оформление</a>
+                <a class="navLink" [routerLink]="['category', 'shop', 'Букеты']" routerLinkActive="active-link">Магазин</a>
+                <a class="navLink" [routerLink]="['category', 'wedding']"  routerLinkActive="active-link">Свадебная
+                    флористика</a>
                 <a class="navLink" [routerLink]="['category', 'oformlenie', 'Фотозоны'] || ['category', 'oformlenie']"
                    routerLinkActive="active-link">Оформление</a>
                 <a class="navLink" [routerLink]="['category', 'contact']" routerLinkActive="active-link">Контакты</a>
@@ -60,26 +60,22 @@
                             </div>
                             <div *ngSwitchCase="'cooperation'" class="menu_right_text open">
                                 <h3>Предложения сотрудничества </h3>
-                                <span>096-609-12-55 </span>
-                                <span>lazutikovnikita@gmail.com</span>
-                                <h3>Корпоративные и оптовые заказы </h3>
-                                <span>096-609-12-55</span>
-                                <span>corporative@gmail.com</span>
+                                <a class="cooperation_link" href="tel:+380956979520">095-697-95-20</a>
+                                <a class="cooperation_link" href="mailto:cvetochniykharkiv@gmail.com">cvetochniykharkiv@gmail.com</a>
                             </div>
                             <div *ngSwitchCase="'delivery'" class="menu_right_text open">
                                 <h3>Доставка курьреом</h3>
-                                <span>Харькову - 50 гривен</span>
-                                <span>за город - 50 гривен</span>
+                                <span>по Харькову от 50 гривен</span>
                                 <span>Бесплатная доставка <strong>от 1 000 гривен</strong></span>
                             </div>
                         </div>
                     </div>
                     <div class="nav_menu_wrap mobile_menu">
                         <div class="nav_menu_left">
-                            <a [routerLink]="['category', 'shop']" class="shop"
+                            <a [routerLink]="['category', 'shop', 'Букеты']" class="shop"
                                (click)="menuToggle()">магазин</a>
                             <a [routerLink]="['category', 'wedding']" class="weddingLinkMobile"
-                               (click)="menuToggle()">свадебное оформление
+                               (click)="menuToggle()">Свадебная флористика
                             </a>
                             <a [routerLink]="['category', 'oformlenie', 'Фотозоны'] || ['category', 'oformlenie']"
                                class="visualLinkMobile"
