--- a/src/app/content/shop/shop.component.html
+++ b/src/app/content/shop/shop.component.html
@@ -2,7 +2,8 @@
     <div class="sidebars_wrapper">
         <div class="sidebar-left">
             <div class="sidebar-left-wrapper">
-                <a><h2 [routerLink]="['/category', parentCategory]" class="shop_title navLink">{{title}}</h2>
+                <a>
+                    <h2 [routerLink]="['/category', parentCategory]" class="shop_title navLink">{{title}}</h2>
                 </a>
                 <div *ngIf="categories as categoryArr" class="sidebar-left_list">
                     <ul>
@@ -14,16 +15,16 @@
                             >
                                 {{category}}
                             </a>
-                            <i     *ngIf="getSubcategories(category)"
+                            <i *ngIf="getSubcategories(category)"
 
-                                   [class.down]="category === rightMenuCategoryCheck"
-                                   class="fa fa-chevron-right nav_menu_left_butt_toggle fa-2x"
-                                   style="font-size: 0.7em" (click)="rotateSwitcher(category)"
+                               [class.down]="category === rightMenuCategoryCheck"
+                               class="fa fa-chevron-right nav_menu_left_butt_toggle fa-2x"
+                               style="font-size: 0.7em" (click)="rotateSwitcher(category)"
                             >
                             </i>
-                            <ul [@openClose]="category === rightMenuCategoryCheck ? 'open' : 'closed'" >
-                                <li   class="subMenu_elem"
-                                    >
+                            <ul [@openClose]="category === rightMenuCategoryCheck ? 'open' : 'closed'">
+                                <li class="subMenu_elem"
+                                >
                                     <a class="navLink"
                                        *ngFor="let subc of getSubcategories(category)"
                                        routerLinkActive="active-link"
